RESOLVED FIXED184897
Web Inspector: Annotate Same-Site cookies
https://bugs.webkit.org/show_bug.cgi?id=184897
Summary Web Inspector: Annotate Same-Site cookies
Daniel Bates
Reported 2018-04-23 14:27:22 PDT
We should annotate Same-Site cookies in the Web Inspector. In particular, we should annotate the Same-Site policy (strict or lax) for each cookie.
Attachments
[Patch] Work-in-progress (46.54 KB, patch)
2018-05-25 12:12 PDT, Daniel Bates
no flags
[Patch] Work-in-progress (46.58 KB, patch)
2018-05-25 12:29 PDT, Daniel Bates
no flags
Patch and layout test (47.59 KB, patch)
2018-05-25 14:16 PDT, Daniel Bates
no flags
Blaze Burg
Comment 1 2018-05-03 09:58:56 PDT
Daniel Bates
Comment 2 2018-05-25 12:12:58 PDT
Created attachment 341307 [details] [Patch] Work-in-progress
Daniel Bates
Comment 3 2018-05-25 12:29:32 PDT
Created attachment 341309 [details] [Patch] Work-in-progress Rebased patch following the landing of the patch for bug #185041.
EWS Watchlist
Comment 4 2018-05-25 12:31:12 PDT
Attachment 341309 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/cocoa/CookieCocoa.mm:129: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 5 2018-05-25 12:49:28 PDT
Comment on attachment 341309 [details] [Patch] Work-in-progress View in context: https://bugs.webkit.org/attachment.cgi?id=341309&action=review Nice, the patch looks good to me. > Source/WebInspectorUI/UserInterface/Models/Cookie.js:114 > + console.error("Invalid SameSite type", sameSiteType); Might as well return something here just in case. Probably `return sameSiteType`. > Source/WebInspectorUI/UserInterface/Views/ResourceCookiesContentView.js:93 > + cell.textContent = cookie.sameSite == WI.Cookie.SameSiteType.None ? emDash : WI.Cookie.displayNameForSameSiteType(cookie.sameSite); Style: ===
Daniel Bates
Comment 6 2018-05-25 14:16:46 PDT
Created attachment 341326 [details] Patch and layout test
EWS Watchlist
Comment 7 2018-05-25 14:18:25 PDT
Attachment 341326 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/cocoa/CookieCocoa.mm:133: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 8 2018-05-25 14:18:37 PDT
(In reply to Joseph Pecoraro from comment #5) > > Source/WebInspectorUI/UserInterface/Models/Cookie.js:114 > > + console.error("Invalid SameSite type", sameSiteType); > > Might as well return something here just in case. Probably `return > sameSiteType`. > Fixed. > > Source/WebInspectorUI/UserInterface/Views/ResourceCookiesContentView.js:93 > > + cell.textContent = cookie.sameSite == WI.Cookie.SameSiteType.None ? emDash : WI.Cookie.displayNameForSameSiteType(cookie.sameSite); > > Style: === Fixed.
Blaze Burg
Comment 9 2018-05-25 14:29:42 PDT
Comment on attachment 341326 [details] Patch and layout test View in context: https://bugs.webkit.org/attachment.cgi?id=341326&action=review r=me, great patch. Let's wait for EWS, I anticipate nitpicking platform-specific results. > Source/WebCore/platform/Cookie.h:171 > + using values = EnumValues< This is cool. > Source/WebCore/platform/network/cocoa/CookieCocoa.mm:39 > +static NSString * const NSHTTPCookieSameSiteStrict = @"strict"; This stuff should be in NSHTTPCookieSPI, but that file doesn't exist yet. > LayoutTests/http/tests/inspector/network/har/har-page-expected.txt:718 > + "sameSite": "Lax" I believe we may need different expectations per port, if this isn't going to be propagated. Let's see what EWS says.
EWS Watchlist
Comment 10 2018-05-25 15:46:19 PDT
Comment on attachment 341326 [details] Patch and layout test Attachment 341326 [details] did not pass jsc-ews (mac): Output: http://webkit-queues.webkit.org/results/7804230 New failing tests: stress/ftl-put-by-id-setter-exception-interesting-live-state.js.ftl-eager-no-cjit
Daniel Bates
Comment 11 2018-05-30 16:41:31 PDT
(In reply to Build Bot from comment #10) > Comment on attachment 341326 [details] > Patch and layout test > > Attachment 341326 [details] did not pass jsc-ews (mac): > Output: http://webkit-queues.webkit.org/results/7804230 > > New failing tests: > stress/ftl-put-by-id-setter-exception-interesting-live-state.js.ftl-eager-no- > cjit I am unclear how a Web Inspector change could cause this test failure.
Daniel Bates
Comment 12 2018-05-30 16:42:42 PDT
Comment on attachment 341326 [details] Patch and layout test Clearing flags on attachment: 341326 Committed r232318: <https://trac.webkit.org/changeset/232318>
Daniel Bates
Comment 13 2018-05-30 16:42:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.