Source/WebInspectorUI/UserInterface/Controllers/HARBuilder.js
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017 Apple Inc. All rights reserved.
+ * Copyright (C) 2017-2018 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -177,6 +177,8 @@ WI.HARBuilder = class HARBuilder
                 json.expires = HARBuilder.date(cookie.expirationDate(requestSentDate));
                 json.httpOnly = cookie.httpOnly;
                 json.secure = cookie.secure;
+                if (cookie.sameSite !== WI.Cookie.SameSiteType.None)
+                    json.sameSite = cookie.sameSite;
             }
 
             result.push(json);
